--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
   "name": "telegram-betting-app",
   "version": "1.0.0",
-  "description": "A Telegram mini app for betting with Google Wallet integration",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "engines": {
-    "node": "16.x"
-  },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-redis": "^6.0.0",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^5.10.9",
-    "node-telegram-bot-api": "^0.50.0",
-    "redis": "^3.1.2",
-    "connect-redis": "^5.0.0",
     "express-session": "^1.17.1",
-    "googleapis": "^100.0.0"
+    "mongoose": "^5.10.9",
+    "node-telegram-bot-api": "^0.30.0",
+    "redis": "^3.0.2",
+    "googleapis": "^39.2.0"
   },
-  "author": "Your Name",
+  "author": "",
   "license": "ISC"
 }
