--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGO_URI=mongodb+srv://peter:darkness@nightstarcluster.ilmn2v7.mongodb.net/test
-REDIS_URL=redis://default:W3kO3QSkdO6cG7@redis-14893.c85.us-east-1-2.ec2.cloud.redislabs.com:14893
-TELEGRAM_BOT_TOKEN=900579279:AAE1U8-SuXT8F8wG9F0CBm8TB3vM4hzrF6w
-ADMIN_ID=751385228
-GOOGLE_WALLET_API_KEY=ZJfG9QYUFvowobKfZkH_zExhZz2L
-GOOGLE_CLIENT_ID=1064664254717-h9d9k9f8sh9fk3f3.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=GOCSPX-c6X_lmL3u1k6l7k6uF3f3
+MONGO_URI=mongodb+srv://macs:1337@cluster0.jjkw4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+REDIS_URL=redis://default:2ol05uAUrYs8dBWCmJCx0qT4YJGKGh26@redis-11365.c311.eu-central-1-1.ec2.redns.redis-cloud.com:11365
+TELEGRAM_BOT_TOKEN=7996379094:AAGGvxufeR9Pxsq3vBA8nY6Ti-zIVHsHV3c
+ADMIN_ID=506336274
+GOOGLE_WALLET_API_KEY=AIzaSyDg1aF7vn8FGShHsfVRmLwrSV203d028Sg
+GOOGLE_CLIENT_ID=655968772922-d922fbcp0jr7svnq4ul8ua28liaj7m4v.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
