--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ ADMIN_ID=506336274
 GOOGLE_WALLET_API_KEY=AIzaSyDg1aF7vn8FGShHsfVRmLwrSV203d028Sg
 GOOGLE_CLIENT_ID=655968772922-d922fbcp0jr7svnq4ul8ua28liaj7m4v.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+SESSION_SECRET=your_session_secret_here
