--- a/package.json
+++ b/package.json
@@ -1,23 +1,44 @@
 {
-  "name": "telegram-betting-app",
+  "name": "telegram-betting-miniapp",
+  "private": true,
   "version": "1.0.0",
-  "description": "A comprehensive Telegram mini-app that involves betting, a 1v1 challenge system, and integration with Google Wallet for transactions.",
-  "main": "server/app.js",
+  "type": "module",
   "scripts": {
-    "start": "node server/app.js"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "start": "node dist/server/index.js",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.11.15",
-    "morgan": "^1.10.0",
-    "cors": "^2.8.5",
-    "redis": "^3.1.2",
-    "node-telegram-bot-api": "^0.50.0",
-    "ws": "^7.4.6"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.344.0",
+    "express": "^4.18.3",
+    "node-telegram-bot-api": "^0.65.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "redis": "^4.6.13",
+    "mongoose": "^8.2.1",
+    "react-router-dom": "^6.22.2",
+    "framer-motion": "^11.0.8",
+    "@twa-dev/sdk": "^7.0.0",
+    "react-query": "^3.39.3",
+    "axios": "^1.6.7"
   },
-  "engines": {
-    "node": "14.x"
-  },
-  "author": "Your Name",
-  "license": "MIT"
+  "devDependencies": {
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@types/express": "^4.17.21",
+    "@types/node-telegram-bot-api": "^0.64.3",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.2"
+  }
 }
