--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && tsc -p tsconfig.server.json",
     "start": "node dist/server/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -40,5 +40,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
