--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "redis": "^4.6.13",
+    "ioredis": "^5.3.2",
     "mongoose": "^8.2.1",
     "react-router-dom": "^6.22.2",
     "framer-motion": "^11.0.8",
     "@twa-dev/sdk": "^7.0.0",
     "react-query": "^3.39.3",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.19"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/express": "^4.17.21",
     "@types/node-telegram-bot-api": "^0.64.3",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
