--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "outDir": "dist/server",
     "rootDir": "src",
     "strict": true,
     "skipLibCheck": true,
-    "types": ["node"]
+    "types": ["node"],
+    "allowJs": true
   },
-  "include": ["src/server/**/*", "src/config/**/*"]
+  "include": ["src/server/**/*", "src/config/**/*", "src/types/**/*"]
 }
