--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ES2020",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "outDir": "dist/server",
     "rootDir": "src",
@@ -12,8 +12,5 @@
     "allowJs": true
   },
   "include": ["src/server/**/*", "src/config/**/*", "src/types/**/*"],
-  "ts-node": {
-    "esm": true,
-    "experimentalSpecifierResolution": "node"
-  }
+  "exclude": ["node_modules"]
 }
