--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:client && npm run build:server",
+    "build": "npm run build:client && npm run build:server && npm run copy-config",
     "build:client": "tsc && vite build",
     "build:server": "tsc -p tsconfig.server.json",
+    "copy-config": "mkdir -p dist/server/config && cp src/config/*.ts dist/server/config/",
     "start": "node dist/server/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -29,7 +30,8 @@
     "react-query": "^3.39.3",
     "axios": "^1.6.7",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.19"
+    "@types/node": "^20.11.19",
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
@@ -42,7 +44,6 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
     "vite": "^5.4.2"
   },
   "engines": {
