--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:client && npm run build:server && npm run copy-config",
+    "build": "npm run build:client && npm run build:server",
     "build:client": "tsc && vite build",
     "build:server": "tsc -p tsconfig.server.json",
-    "copy-config": "mkdir -p dist/server/config && cp src/config/*.ts dist/server/config/",
-    "start": "node dist/server/index.js",
+    "heroku-postbuild": "npm run build",
+    "start": "node dist/server/server/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
