--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:client": "tsc && vite build",
     "build:server": "tsc -p tsconfig.server.json",
     "heroku-postbuild": "npm run build",
-    "start": "node dist/server/server/index.js",
+    "start": "node dist/server/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -31,7 +31,13 @@
     "axios": "^1.6.7",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "@colyseus/core": "^0.15.0",
+    "@colyseus/ws-transport": "^0.15.0",
+    "@colyseus/monitor": "^0.15.0",
+    "@colyseus/schema": "^2.0.0",
+    "colyseus.js": "^0.15.0",
+    "grammy": "^1.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
