--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@colyseus/schema": "^2.0.0",
     "colyseus.js": "^0.15.0",
     "grammy": "^1.21.1",
-    "reflect-metadata": "^0.2.1"
+    "reflect-metadata": "^0.2.1",
+    "fs-extra": "^11.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
