--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -8,7 +8,7 @@
     "rootDir": "src",
     "strict": true,
     "skipLibCheck": true,
-    "types": ["node"],
+    "types": ["node", "fs-extra"],
     "allowJs": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
