--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"tsx watch --env-file=.env src/server/index.ts\"",
     "build": "npm run build:client && npm run build:server",
     "build:client": "tsc && vite build",
     "build:server": "tsc -p tsconfig.server.json",
@@ -40,7 +40,9 @@
     "grammy": "^1.21.1",
     "reflect-metadata": "^0.2.1",
     "fs-extra": "^11.2.0",
-    "@types/fs-extra": "^11.0.4"
+    "@types/fs-extra": "^11.0.4",
+    "tsx": "^4.7.1",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
@@ -53,7 +55,8 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "concurrently": "^8.2.2"
   },
   "engines": {
     "node": "18.x"
