--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -8,10 +8,10 @@
     "rootDir": "src",
     "strict": true,
     "skipLibCheck": true,
-    "types": ["node", "fs-extra"],
     "allowJs": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "useDefineForClassFields": false,
     "typeRoots": ["./node_modules/@types", "./src/server/types"]
   },
   "include": ["src/server/**/*", "src/config/**/*", "src/types/**/*"],
