--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -11,7 +11,7 @@
     "allowJs": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "useDefineForClassFields": false,
+    "useDefineForClassFields": true,
     "typeRoots": ["./node_modules/@types", "./src/server/types"]
   },
   "include": ["src/server/**/*", "src/config/**/*", "src/types/**/*"],
