--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite\" \"tsx watch --env-file=.env src/server/index.ts\"",
+    "dev": "concurrently \"vite\" \"tsx watch src/server/index.ts\"",
     "build": "npm run build:client && npm run build:server",
     "build:client": "tsc && vite build",
     "build:server": "tsc -p tsconfig.server.json",
