--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ GOOGLE_CLIENT_ID=655968772922-d922fbcp0jr7svnq4ul8ua28liaj7m4v.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 REDIS_URL=redis://default:2ol05uAUrYs8dBWCmJCx0qT4YJGKGh26@redis-11365.c311.eu-central-1-1.ec2.redns.redis-cloud.com:11365
 MONGODB_URL=mongodb+srv://macs:1337@cluster0.jjkw4.mongodb.net/starnight?retryWrites=true&w=majority&appName=Cluster0
-APP_URL=https://nightstar9bot-d607ada78002.herokuapp.com
+APP_URL=http://localhost:5173
 BOT_USERNAME=starnight9bot
+NODE_ENV=development
