--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "fs-extra": "^11.2.0",
     "@types/fs-extra": "^11.0.4",
     "tsx": "^4.7.1",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "concurrently": "^8.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
@@ -55,8 +56,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.4.2",
-    "concurrently": "^8.2.2"
+    "vite": "^5.4.2"
   },
   "engines": {
     "node": "18.x"
