--- a/package.json
+++ b/package.json
@@ -3,62 +3,67 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
-    "dev": "concurrently \"vite\" \"tsx watch src/server/index.ts\"",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "dev:client": "vite",
+    "dev:server": "tsx watch --tsconfig tsconfig.server.json src/server/index.ts",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "tsc && vite build",
-    "build:server": "tsc -p tsconfig.server.json",
+    "build:client": "tsc --project tsconfig.app.json && vite build",
+    "build:server": "tsc --project tsconfig.server.json",
     "heroku-postbuild": "npm run build",
-    "start": "node dist/server/server/index.js",
+    "start": "cross-env NODE_ENV=production node dist/server/server/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "lucide-react": "^0.344.0",
-    "express": "^4.18.3",
-    "node-telegram-bot-api": "^0.65.1",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
-    "redis": "^4.6.13",
-    "ioredis": "^5.3.2",
-    "mongoose": "^8.2.1",
-    "react-router-dom": "^6.22.2",
-    "framer-motion": "^11.0.8",
-    "@twa-dev/sdk": "^7.0.0",
-    "react-query": "^3.39.3",
-    "axios": "^1.6.7",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.19",
-    "typescript": "^5.3.3",
     "@colyseus/core": "^0.15.0",
-    "@colyseus/ws-transport": "^0.15.0",
     "@colyseus/monitor": "^0.15.0",
     "@colyseus/schema": "^2.0.0",
-    "colyseus.js": "^0.15.0",
-    "grammy": "^1.21.1",
-    "reflect-metadata": "^0.2.1",
-    "fs-extra": "^11.2.0",
+    "@colyseus/ws-transport": "^0.15.0",
+    "@twa-dev/sdk": "^7.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
-    "tsx": "^4.7.1",
-    "dotenv": "^16.4.5",
-    "concurrently": "^8.2.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@types/node-telegram-bot-api": "^0.64.3",
+    "@types/node": "^20.11.19",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
+    "axios": "^1.6.7",
+    "colyseus.js": "^0.15.0",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "framer-motion": "^11.0.8",
+    "fs-extra": "^11.2.0",
+    "grammy": "^1.21.1",
+    "ioredis": "^5.3.2",
+    "lucide-react": "^0.344.0",
+    "mongoose": "^8.2.1",
+    "node-telegram-bot-api": "^0.65.1",
     "postcss": "^8.4.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.2",
+    "redis": "^4.6.13",
+    "reflect-metadata": "^0.2.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
     "vite": "^5.4.2"
   },
-  "engines": {
-    "node": "18.x"
+  "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.64.3",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11"
   }
 }
