--- a/.env
+++ b/.env
@@ -1,19 +1,7 @@
-# Server Configuration
-PORT=3000
-NODE_ENV=development
-
-# Telegram Bot
-TELEGRAM_BOT_TOKEN=7996379094:AAGGvxufeR9Pxsq3vBA8nY6Ti-zIVHsHV3c
-ADMIN_ID=506336274
-
-# Database URLs
-REDIS_URL=redis://default:2ol05uAUrYs8dBWCmJCx0qT4YJGKGh26@redis-11365.c311.eu-central-1-1.ec2.redns.redis-cloud.com:11365
-MONGODB_URL=mongodb+srv://macs:1337@cluster0.jjkw4.mongodb.net/starnight?retryWrites=true&w=majority&appName=Cluster0
-
-# Google Pay
-GOOGLE_WALLET_API_KEY=AIzaSyDg1aF7vn8FGShHsfVRmLwrSV203d028Sg
-GOOGLE_CLIENT_ID=655968772922-d922fbcp0jr7svnq4ul8ua28liaj7m4v.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-
-# Client Configuration
-VITE_API_URL=http://localhost:3000
+VITE_TELEGRAM_BOT_TOKEN=7996379094:AAGGvxufeR9Pxsq3vBA8nY6Ti-zIVHsHV3c
+VITE_ADMIN_ID=506336274
+VITE_GOOGLE_WALLET_API_KEY=AIzaSyDg1aF7vn8FGShHsfVRmLwrSV203d028Sg
+VITE_GOOGLE_CLIENT_ID=655968772922-d922fbcp0jr7svnq4ul8ua28liaj7m4v.apps.googleusercontent.com
+VITE_GOOGLE_CLIENT_SECRET=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
+VITE_REDIS_URL=redis://default:2ol05uAUrYs8dBWCmJCx0qT4YJGKGh26@redis-11365.c311.eu-central-1-1.ec2.redns.redis-cloud.com:11365
+VITE_MONGODB_URL=mongodb+srv://macs:1337@cluster0.jjkw4.mongodb.net/starnight?retryWrites=true&w=majority&appName=Cluster0
