--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev:client": "vite",
     "dev:server": "tsx watch --tsconfig tsconfig.server.json src/server/index.ts",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "tsc --project tsconfig.app.json && vite build",
-    "build:server": "tsc --project tsconfig.server.json",
+    "build:client": "tsc && vite build",
+    "build:server": "tsc -p tsconfig.server.json",
     "heroku-postbuild": "npm run build",
     "start": "cross-env NODE_ENV=production node dist/server/server/index.js",
     "lint": "eslint .",
