--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -3,15 +3,17 @@
     "target": "ES2020",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "esModuleInterop": true,
     "outDir": "dist/server",
     "rootDir": "src",
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
     "allowJs": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "useDefineForClassFields": false,
+    "composite": true,
+    "declaration": true,
+    "sourceMap": true,
     "types": ["node"],
     "typeRoots": ["./node_modules/@types", "./src/server/types"]
   },
