--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,10 +12,15 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+    "allowJs": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["vite/client"]
   },
   "include": ["src"],
-  "exclude": ["src/server/**/*", "node_modules", "dist"]
+  "exclude": ["src/server/**/*", "node_modules", "dist"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
