--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "version": "1.0.0",
   "type": "module",
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": "10.x"
   },
   "scripts": {
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "dev:client": "vite",
-    "dev:server": "cross-env NODE_ENV=development tsx watch src/server/index.ts",
+    "dev": "vite",
     "build": "npm run build:client && npm run build:server",
     "build:client": "tsc && vite build",
     "build:server": "tsc -p tsconfig.server.json",
@@ -30,7 +29,6 @@
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "colyseus.js": "^0.15.0",
-    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.3",
@@ -44,7 +42,6 @@
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vite": "^5.4.2"
   },
