--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "tsc && vite build",
     "build:server": "tsc -p tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node dist/server/server/index.js",
+    "start": "node dist/server/server/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -24,21 +24,27 @@
     "@twa-dev/sdk": "^7.0.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.19",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "colyseus.js": "^0.15.0",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "framer-motion": "^11.0.8",
+    "fs-extra": "^11.2.0",
+    "grammy": "^1.21.1",
+    "ioredis": "^5.3.2",
     "lucide-react": "^0.344.0",
+    "mongoose": "^8.2.1",
     "postcss": "^8.4.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
+    "redis": "^4.6.13",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "tailwindcss": "^3.4.1",
