--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "1.0.0",
   "type": "module",
   "engines": {
-    "node": "18.x",
-    "npm": "10.x"
+    "node": "18.x"
   },
   "scripts": {
     "dev": "vite",
     "build": "npm run build:client && npm run build:server",
     "build:client": "tsc && vite build",
     "build:server": "tsc -p tsconfig.server.json",
+    "heroku-postbuild": "npm run build",
     "start": "node dist/server/server/index.js",
     "lint": "eslint .",
     "preview": "vite preview"
