--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
     "redis": "^4.6.13",
+    "reflect-metadata": "^0.2.1",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "tailwindcss": "^3.4.1",
