--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -15,7 +15,8 @@
     "declaration": true,
     "sourceMap": true,
     "types": ["node"],
-    "typeRoots": ["./node_modules/@types", "./src/server/types"]
+    "typeRoots": ["./node_modules/@types", "./src/server/types"],
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src/server/**/*", "src/config/**/*", "src/types/**/*"],
   "exclude": ["node_modules", "dist"]
